# lib_sp

./: 1.txt  CMakeLists.txt  readme.md  update-log.txt
cmake/: fmt.cmake  spdlog.cmake  to_work_low_version.cmake
config/: config.h.in  version.rc.in
example/shared/: main.cc
ext/fmt/: CMakeLists.txt
include/: config.h  universe_def.h  utils.h
include/serial_port/: constdef.h  serial_port_interface.h  serial_port_linux_base.h  serial_port_params.h  serial_port_win_base.h  serial_port_win_info.h
other_tools/AccessPort_23021/: AccessPort.ini
src/: serial_port_interface.cpp  serial_port_linux_base.cpp  serial_port_params.cpp  serial_port_win_base.cpp  serial_port_win_info.cpp  utils.cpp  version.aps  version.rc
